# ramalloc

./: .gitignore  CMakeLists.txt  DoxySfile.in  LICENSE  LICENSE.markdown  README.markdown  README.md  ROFLME.md  TODO.markdown  TODO.markdown.txt  index.html  params.json  splintrc
cmake/: Doxyfile.in  cache.cmake  detect.cmake  doxygen.cmake  doxys.cmake  sample.cmake  splint.cmake  trio.cmake  windows.splintrc
cmake/trio/: CMakeLists.txt  cmake-fix-external-install.diff
dep/freebsd/: freebsd-getopt.7z
dep/freebsd/include/: getopt.h
dep/freebsd/src/: getopt.c  getopt_long.c
dep/trio/: CMakeLists.txt  configure  regression.c
include/ramalloc/: algn.h  annotate.h  barrier.h  cast.h  compat.h  compiler.h  default.h  facade.h  fail.h  foot.h  lazy.h  list.h  mem.h  meta.h  misc.h  mtx.h  mux.h  opt.h  para.h  pg.h  ramalloc.h  reply.h  sig.h  slot.h  slst.h  stdint.h  sys.h  test.h  thread.h  tls.h  tra.h  vec.h  want.h
include/ramalloc/sys/: detect.h  gcc.h  linux.h  msvc.h  posix.h  pthreads.h  splint.h  stdint.h  sysdef.h  types.h  uix.h  win.h
scripts/: test-install.sh
src/doc/: footer.html.in  groups.h
src/lib/: algn.c  barrier.c  cast.c  compat.c  config.h.in  default.c  fail.c  foot.c  lazy.c  list.c  mem.c  misc.c  mtx.c  mux.c  para.c  pg.c  ramalloc.c  sig.c  slot.c  slst.c  sys.c  test.c  thread.c  tls.c  tra.c  vec.c
src/lib/sys/: linux.c  posix.c  pthreads.c  uix.c  win.c
src/sample/: CMakeLists.txt
src/sample/cmake/: ramalloc.cmake
src/sample/src/: main.c
src/test/: algntest.c  casttest.c  compattest.c  defaulttest.c  lazytest.c  muxtest.c  paratest.c  pgtest.c  slottest.c
src/test/shared/: getopt.h  parseargs.c  parseargs.h  test.c  test.h
